--- a/projectgenerator/ui/generate_project.ui
+++ b/projectgenerator/ui/generate_project.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>718</width>
-    <height>670</height>
+    <height>697</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -64,6 +64,34 @@
      </property>
      <widget class="QWidget" name="page">
       <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="1">
+        <widget class="QWidget" name="widget" native="true">
+         <layout class="QGridLayout" name="gridLayout_2">
+          <property name="leftMargin">
+           <number>0</number>
+          </property>
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+         </layout>
+        </widget>
+       </item>
+       <item row="7" column="0">
+        <widget class="QTextBrowser" name="txtStdout">
+         <property name="toolTip">
+          <string/>
+         </property>
+         <property name="openLinks">
+          <bool>false</bool>
+         </property>
+        </widget>
+       </item>
        <item row="3" column="0" colspan="2">
         <widget class="QGroupBox" name="pg_config">
          <property name="title">
@@ -163,15 +191,6 @@
          </layout>
         </widget>
        </item>
-       <item row="0" column="1">
-        <widget class="QWidget" name="widget" native="true">
-         <layout class="QGridLayout" name="gridLayout_2">
-          <property name="margin">
-           <number>0</number>
-          </property>
-         </layout>
-        </widget>
-       </item>
        <item row="1" column="0" colspan="2">
         <widget class="QGroupBox" name="ili_config">
          <property name="title">
@@ -186,7 +205,7 @@
            </widget>
           </item>
           <item row="3" column="1" colspan="3">
-           <widget class="QgsProjectionSelectionWidget" name="crsSelector">
+           <widget class="QgsProjectionSelectionWidget" name="crsSelector" native="true">
             <property name="focusPolicy">
              <enum>Qt::StrongFocus</enum>
             </property>
@@ -262,16 +281,6 @@
          </layout>
         </widget>
        </item>
-       <item row="6" column="0">
-        <widget class="QTextBrowser" name="txtStdout">
-         <property name="toolTip">
-          <string/>
-         </property>
-         <property name="openLinks">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
        <item row="5" column="0">
         <widget class="QGroupBox" name="gpkg_config">
          <property name="title">
@@ -301,13 +310,20 @@
          </layout>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="8" column="0">
         <widget class="QDialogButtonBox" name="buttonBox">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="standardButtons">
           <set>QDialogButtonBox::Cancel|QDialogButtonBox::Help|QDialogButtonBox::Ok</set>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QProgressBar" name="progress_bar">
+         <property name="value">
+          <number>0</number>
          </property>
         </widget>
        </item>
