--- a/projectgenerator/ui/options.ui
+++ b/projectgenerator/ui/options.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>403</width>
-    <height>305</height>
+    <width>737</width>
+    <height>492</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -23,7 +23,7 @@
    <item row="3" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -47,33 +47,6 @@
        <string>Interlis</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_2">
-       <item row="1" column="1">
-        <layout class="QHBoxLayout" name="horizontalLayout_2">
-         <item>
-          <widget class="QLineEdit" name="java_path_line_edit">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-             <horstretch>1</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="toolTip">
-            <string>If this is left empty, %PATH and %JAVA_HOME is searched</string>
-           </property>
-           <property name="placeholderText">
-            <string>[By default %PATH and %JAVA_HOME is searched]</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QToolButton" name="java_path_search_button">
-           <property name="text">
-            <string>...</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
        <item row="0" column="0" colspan="2">
         <widget class="QgsCollapsibleGroupBox" name="custom_model_directories_box">
          <property name="title">
@@ -122,13 +95,6 @@
          <zorder></zorder>
         </widget>
        </item>
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>Java Path</string>
-         </property>
-        </widget>
-       </item>
        <item row="2" column="0" colspan="2">
         <widget class="QGroupBox" name="ili2db_enable_debugging">
          <property name="title">
@@ -153,6 +119,73 @@
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Java Path</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QLineEdit" name="java_path_line_edit">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+             <horstretch>1</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
+           <property name="toolTip">
+            <string>If this is left empty, %PATH and %JAVA_HOME is searched</string>
+           </property>
+           <property name="placeholderText">
+            <string>[By default %PATH and %JAVA_HOME is searched]</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QToolButton" name="java_path_search_button">
+           <property name="text">
+            <string>...</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="3" column="0">
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab_3">
+      <attribute name="title">
+       <string>Ili2Db Options</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout_5">
+       <item row="0" column="0">
+        <widget class="QComboBox" name="ili2db_tool_combobox"/>
+       </item>
+       <item row="0" column="1">
+        <widget class="QComboBox" name="ili2db_action_combobox"/>
+       </item>
+       <item row="2" column="0" colspan="2">
+        <widget class="QTextEdit" name="ili2db_options_textedit">
+         <property name="readOnly">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
       </layout>
