having the checkbox unchecked on open of the dialog to avoid unintended overwriting and mostly you don't need it on second import tooltip to get informed that catalogues are deleted as well
fixes #361

--- a/QgisModelBaker/ui/import_data.ui
+++ b/QgisModelBaker/ui/import_data.ui
@@ -129,6 +129,9 @@
             <property name="text">
              <string>Delete existing data in affected tables</string>
             </property>
+            <property name="toolTip">
+             <string>Delete existing data including dependencies like catalogues etc.</string>
+            </property>
            </widget>
           </item>
           <item row="2" column="2">
