--- a/QgisModelBaker/ui/export.ui
+++ b/QgisModelBaker/ui/export.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Export Interlis</string>
+   <string>Export Interlis Data</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
