--- a/QgisModelBaker/ui/export.ui
+++ b/QgisModelBaker/ui/export.ui
@@ -151,7 +151,7 @@
            </widget>
           </item>
           <item row="1" column="2">
-           <widget class="ModelListView" name="export_models_view"/>
+           <widget class="ModelListView" name="export_models_view" native="true"/>
           </item>
          </layout>
         </widget>
